package it.polimi.ingsw.VirtualView.ModelObservers;

public interface ModelObserver {
    void update();
}
